k8s/manifests/apps/jellyfin/jellyfin.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
  labels:
    gateway.infra.services/allow-routes: "true"
    pod-security.kubernetes.io/enforce: restricted
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
      containers:
        - #env:
          #  - name: JELLYFIN_PublishedServerUrl # DLNA
          #    value: xxx.xxx.xxx.xxx
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          # Note: this image in particular has the OpenCL runtime
          image: jellyfin/jellyfin:10.11.11
          imagePullPolicy: Always
          name: jellyfin
          ports:
            - containerPort: 8096
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 3
          resources:
            claims:
              - name: gpu
            requests:
              cpu: 100m
              memory: 1Gi
            limits:
              memory: 2Gi
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /media/tv
              name: media-ng
              readOnly: true
              subPath: tv
            - mountPath: /media/movies
              name: media-ng
              readOnly: true
              subPath: movies
      resourceClaims:
        - name: gpu
          resourceClaimTemplateName: intel-gpu
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config
        - name: media-ng
          readOnly: true
          persistentVolumeClaim:
            claimName: media-ng
---
kind: Service
apiVersion: v1
metadata:
  name: jellyfin
spec:
  ports:
    - port: 80
      targetPort: http
      name: http
      appProtocol: http
      protocol: TCP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: media
  labels:
    external-dns: "true"
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Jellyfin
    gethomepage.dev/icon: jellyfin
    gethomepage.dev/group: Apps
    gethomepage.dev/pod-selector: app.kubernetes.io/name=jellyfin
spec:
  parentRefs:
    - name: services
      namespace: infra
      sectionName: main
  hostnames: []
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: jellyfin
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: media-local
  labels:
    external-dns: "true"
spec:
  parentRefs:
    - name: local-services
      namespace: infra
      sectionName: main
  hostnames: []
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: jellyfin
          port: 80
