k8s/manifests/apps/jellyfin/networkpolicy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: ingress
spec:
  endpointSelector:
    matchLabels: {}
  ingress:
    # Envoy gateway is running on hostNetwork
    - fromEntities:
        - host
        - remote-node
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": envoy-gateway-system
            gateway.envoyproxy.io/owning-gateway-name: local-services
            gateway.envoyproxy.io/owning-gateway-namespace: infra
